--- a/TERM01/ToDo.css
+++ b/TERM01/ToDo.css
@@ -1,25 +1,103 @@
+html{
+	height: 100%;
+}
 body{
-  padding: 50px;
+  background-color: #ffffff;
+	height: 100%;
+	width: 900px;
+	border: 1px solid;
+	margin: auto;
+	padding: 20px 30px 20px 30px;
+}
+article{
+	background-color: #ffffff;
+	height: 100%;
+	border-style: none;
 }
 header{
-  margin-top: 10px;
-  margin-bottom: 30px;
-  padding: 10px;
-  background-color: yellow;
-  border: 1px solid black;
-  overflow: hidden;
-  border-radius: 10px;
+  background-color: #ffc000;
+	line-height:20%;
+	width: 800px;
+	border: 1px solid;
+	border-radius: 10px;
+	margin: auto;
+	padding: 10px;
+	text-align: center;
 }
-#addToDo{
+.button{
   float: left;
   width: 100px;
-  height: 35px;
+  height: 100%;
   font-weight: bold;
   background-color: pink;
   border: 1px solid black;
   border-radius: 10px;
 }
 form{
-
   text-align: right;
 }
+
+/* Main Start */
+main{
+	background-color: #ffffff;
+	height: 80%;
+	width: 800px;
+	margin: auto;
+	padding: 10px;
+}
+
+.middle{
+	float: left;
+	height: 98%;
+	width: 18%;
+	margin: 7px;
+}
+
+.middleTop{
+	line-height:50px;
+	text-align: center;
+	vertical-align: middle;
+	margin-bottom: 5px;
+}
+
+.displayArea_mon{
+	background-color: #cfe0e0;
+	height: 95%;
+	text-align: center;
+	vertical-align: middle;
+}
+
+.displayArea_tue{
+	background-color: #e9b7b7;
+	height: 95%;
+	text-align: center;
+	vertical-align: middle;
+}
+
+.displayArea_wed{
+	background-color: #cce0e0;
+	height: 95%;
+	text-align: center;
+	vertical-align: middle;
+}
+
+.displayArea_thu{
+	background-color: #e2ddc0;
+	height: 95%;
+	text-align: center;
+	vertical-align: middle;
+}
+
+.displayArea_Fri{
+	background-color: skyblue;
+	height: 95%;
+	text-align: center;
+	vertical-align: middle;
+}
+
+.mainLine{
+	float: left;
+	height: 100%;
+	border-right: 1px solid;
+}
+/* Main End */
