--- a/TERM01/ToDo.css
+++ b/TERM01/ToDo.css
@@ -14,9 +14,11 @@ article{
 	height: 100%;
 	border-style: none;
 }
+
+/* Header Start */
 header{
   background-color: #ffc000;
-	line-height:20%;
+	line-height: 20%;
 	width: 800px;
 	border: 1px solid;
 	border-radius: 10px;
@@ -24,7 +26,7 @@ header{
 	padding: 10px;
 	text-align: center;
 }
-.button{
+#button_AddToDo{
   float: left;
   width: 100px;
   height: 100%;
@@ -32,9 +34,13 @@ header{
   background-color: pink;
   border: 1px solid black;
   border-radius: 10px;
+	font-size: 16px;
 }
-form{
+#searchForm{
   text-align: right;
+}
+.formInner{
+	border-radius: 5px;
 }
 
 /* Main Start */
@@ -101,3 +107,66 @@ main{
 	border-right: 1px solid;
 }
 /* Main End */
+
+
+/* Modal*/
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+		text-align: center;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 10px;
+    border: 1px solid #888;
+    width: 400px;
+		height: 240px;
+}
+
+#form_inModal{
+	text-align: center;
+	clear: both;
+}
+.formInner_inModal{
+	border-radius: 5px;
+	width: 300px;
+}
+
+.button_Done{
+	float: right;
+	clear: both;
+	width: 100px;
+	height: 20px;
+	font-weight: bold;
+	background-color: pink;
+	border: 1px solid black;
+	border-radius: 10px;
+	font-size: 16px;
+	margin-top: 4px;
+	margin-right: 44px;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover, .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
