--- a/TERM01/ToDo.css
+++ b/TERM01/ToDo.css
@@ -31,7 +31,7 @@ header{
   width: 100px;
   height: 100%;
   font-weight: bold;
-  background-color: pink;
+  background-color: yellow;
   border: 1px solid black;
   border-radius: 10px;
 	font-size: 16px;
@@ -67,7 +67,6 @@ main{
 }
 
 .displayArea_mon{
-	background-color: #cfe0e0;
 	height: 95%;
 	text-align: center;
 	vertical-align: middle;
@@ -164,9 +163,18 @@ main{
     font-size: 28px;
     font-weight: bold;
 }
-
 .close:hover, .close:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
+}
+
+/* Add item*/
+#divItem{
+	margin-bottom: 20px;
+	width: 100%;
+  height: 100px;
+  text-align: center;
+	border: 1px solid black;
+	border-radius: 5px;
 }
