--- a/TERM01/ToDo.css
+++ b/TERM01/ToDo.css
@@ -73,28 +73,24 @@ main{
 }
 
 .displayArea_tue{
-	background-color: #e9b7b7;
 	height: 95%;
 	text-align: center;
 	vertical-align: middle;
 }
 
 .displayArea_wed{
-	background-color: #cce0e0;
 	height: 95%;
 	text-align: center;
 	vertical-align: middle;
 }
 
 .displayArea_thu{
-	background-color: #e2ddc0;
 	height: 95%;
 	text-align: center;
 	vertical-align: middle;
 }
 
-.displayArea_Fri{
-	background-color: skyblue;
+.displayArea_fri{
 	height: 95%;
 	text-align: center;
 	vertical-align: middle;
@@ -158,7 +154,7 @@ main{
 
 /* The Close Button */
 .close {
-    color: #aaaaaa;
+    color: black;
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -177,4 +173,10 @@ main{
   text-align: center;
 	border: 1px solid black;
 	border-radius: 5px;
+	background-color: white;
+	vertical-align: middle;
+}
+
+.itemName{
+	clear:both;
 }
