--- a/TERM01/ToDo.css
+++ b/TERM01/ToDo.css
@@ -129,11 +129,11 @@ main{
 		height: 240px;
 }
 
-#form_inModal{
+.form_inAddModal, .form_inModifyModal{
 	text-align: center;
 	clear: both;
 }
-.formInner_inModal{
+.formInner_inAddModal, .formInner_inModifyModal{
 	border-radius: 5px;
 	width: 300px;
 }
@@ -154,10 +154,10 @@ main{
 
 /* The Close Button */
 .close {
-    color: black;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+	width: 25px;
+	height: 25px;
+	float: right;
+	margin: 5px 5px;
 }
 .close:hover, .close:focus {
     color: #000;
@@ -166,7 +166,7 @@ main{
 }
 
 /* Add item*/
-#divItem{
+.divItem{
 	margin-bottom: 20px;
 	width: 100%;
   height: 100px;
